[package]
name = "magicblock-perf-service"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
magicblock-bank = { workspace = true }
magicblock-ledger = { workspace = true }
