[package]
name = "magicblock-processor"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
magicblock-accounts-db = { workspace = true }
magicblock-bank = { workspace = true }
magicblock-transaction-status = { workspace = true }
solana-rayon-threadlimit = { workspace = true }
solana-account-decoder = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
solana-timings = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
magicblock-bank = { workspace = true, features = ["dev-context-only-utils"] }
solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }
