[package]
name = "magicblock-pubsub"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
geyser-grpc-proto = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-pubsub = { workspace = true }
jsonrpc-ws-server = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
magicblock-bank = { workspace = true }
magicblock-geyser-plugin = { workspace = true }
solana-account-decoder = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
