[package]
name = "magicblock-tokens"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
magicblock-bank = { workspace = true }
magicblock-transaction-status = { workspace = true }
solana-account-decoder = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
