[package]
name = "magicblock-transaction-status"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
crossbeam-channel = { workspace = true }
log = { workspace = true }
magicblock-accounts-db = { workspace = true }
magicblock-bank = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
solana-transaction-status = { workspace = true }

