[package]
name = "magicblock-version"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
solana-frozen-abi-macro = { workspace = true }
solana-sdk = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(RUSTC_WITH_SPECIALIZATION)',
  'cfg(RUSTC_WITHOUT_SPECIALIZATION)',
] }
