[package]
name = "sleipnir-account-cloner"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
conjunto-transwise = { workspace = true }
delegation-program = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
sleipnir-account-fetcher = { workspace = true }
sleipnir-account-updates = { workspace = true }
sleipnir-account-dumper = { workspace = true }
sleipnir-accounts-api = { workspace = true }
sleipnir-bank = { workspace = true }
sleipnir-metrics = { workspace = true }
sleipnir-mutator = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-tools = { workspace = true }
