[package]
name = "sleipnir-account-fetcher"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
conjunto-transwise = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
sleipnir-metrics = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-tools = { workspace = true }
