[package]
name = "sleipnir-accounts"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
conjunto-transwise = { workspace = true }
log = { workspace = true }
sleipnir-bank = { workspace = true }
sleipnir-mutator = { workspace = true }
sleipnir-processor = { workspace = true }
sleipnir-transaction-status = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
