[package]
name = "sleipnir-accounts"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
conjunto-transwise = { workspace = true }
delegation-program = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
sleipnir-account-fetcher = { workspace = true }
sleipnir-account-updates = { workspace = true }
sleipnir-account-dumper = { workspace = true }
sleipnir-account-cloner = { workspace = true }
sleipnir-accounts-api = { workspace = true }
sleipnir-bank = { workspace = true }
sleipnir-core = { workspace = true }
sleipnir-metrics = { workspace = true }
sleipnir-mutator = { workspace = true }
sleipnir-processor = { workspace = true }
sleipnir-program = { workspace = true }
sleipnir-transaction-status = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
test-tools-core = { workspace = true }
tokio-util = { workspace = true }
