[package]
name = "sleipnir-api"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
conjunto-transwise = { workspace = true }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
sleipnir-account-fetcher = { workspace = true }
sleipnir-account-updates = { workspace = true }
sleipnir-accounts = { workspace = true }
sleipnir-accounts-db = { workspace = true }
sleipnir-bank = { workspace = true }
sleipnir-config = { workspace = true }
sleipnir-geyser-plugin = { workspace = true }
sleipnir-ledger = { workspace = true }
sleipnir-perf-service = { workspace = true }
sleipnir-program = { workspace = true }
sleipnir-pubsub = { workspace = true }
sleipnir-rpc = { workspace = true }
sleipnir-transaction-status = { workspace = true }
solana-geyser-plugin-interface = { workspace = true }
solana-geyser-plugin-manager = { workspace = true }
solana-sdk = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
