[package]
name = "sleipnir-bank"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
arrayref = { workspace = true }
bincode = { workspace = true }
env_logger = { workspace = true, optional = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
sleipnir-program = { workspace = true }
solana-accounts-db = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-cost-model = { workspace = true }
solana-frozen-abi-macro = { workspace = true }
solana-loader-v4-program = { workspace = true }
solana-measure = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
solana-system-program = { workspace = true }
solana-transaction-status = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
env_logger = { workspace = true }
rayon = { workspace = true }

sleipnir-bank = { path = ".", features = ["dev-context-only-utils"] }

solana-accounts-db = { workspace = true, features = ["dev-context-only-utils"] }
solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }

test-tools-core = { workspace = true }

[features]
dev-context-only-utils = ["rayon", "env_logger"]
