[package]
name = "sleipnir-config"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
solana-sdk = { workspace = true }
test-tools-core = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }