[package]
name = "sleipnir-geyser-plugin"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
expiring-hashmap = { workspace = true }
crossbeam-channel = { workspace = true }
geyser-grpc-proto = { workspace = true }
hostname = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sleipnir-transaction-status = { workspace = true }
solana-geyser-plugin-interface = { workspace = true }
solana-sdk = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true, features = ["gzip", "tls", "tls-roots"] }
tonic-health = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }
